--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ main{
 /* Webstie Main Style From Here  */
 
 .banner {
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('./Images/Banner\ Image.png');
+    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../images/Banner\ Image.png');
     background-position: center;
     background-repeat: no-repeat;
     height: 600px;
@@ -93,7 +93,7 @@ main{
 
 /* section style three */
 .banner-bg {
-    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('./images/Vectorrr.png');
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../images/Vectorrr.png');
     background-repeat: no-repeat;
     border-radius: 16px;
 }
