--- a/style/style.css
+++ b/style/style.css
@@ -185,3 +185,86 @@ button{
     text-transform: uppercase;
     margin-top: 40px;
 }
+
+/* section 5 start from desing from here */
+
+.container-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 100px;
+}
+
+.section-five-img{
+    width: 140px;
+    height: 140px;
+}
+.container-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-content {
+    flex: 1; 
+    justify-content: center;
+    align-items: left;
+}
+
+.img-border{
+    padding: 30px;
+    border-radius: 463px;
+    border: 15px solid #F00;
+    margin-right: 80px;
+    margin-left: 60px;
+    
+}
+.box-description{
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    font-style: normal;
+}
+.Years{ 
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 0px;
+    padding-top: 40px;
+}
+.offer{
+    color: #F00;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.coming-soon{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    margin: 0;
+}
+.box-description{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    width: 400px;
+}
+.box-description-2{
+    width: 250px;
+    margin-bottom: 70px;
+}
+
+/* sections six style start here */
+
