--- a/style/style.css
+++ b/style/style.css
@@ -254,17 +254,18 @@ button{
 }
 .box-description{
     color: rgba(7, 2, 17, 0.60);
-    font-family: Inter;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
     line-height: 32px;
     width: 400px;
 }
 .box-description-2{
     width: 250px;
     margin-bottom: 70px;
+    color: rgba(7, 2, 17, 0.60);
 }
 
 /* sections six style start here */
 
+
+
+ 
