--- a/style/style.css
+++ b/style/style.css
@@ -329,8 +329,35 @@ button{
     left: -25%;
     transform: translateY(-60%);
 }
-.gift-img{
 
+/* Grid Section Style Here */
+.section-two{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.offer-title{
+    color: #F00;
+    font-size: 24px;
+}
+.box-description-two{
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    line-height: 32px; /* 160% */
+    width: 900px;
+}
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.image-container img {
+    width: calc(33.33% - 20px);
+    height: auto;
 }
 
  
